--- a/quiz/index.html
+++ b/quiz/index.html
@@ -156,7 +156,7 @@
                 <li><a href="quiz04.html">04</a></li>
                 <li><a href="quiz05.html">05</a></li>
                 <li><a href="quiz06.html">06</a></li>
-                <li><a href="quiztest.html">검정고시기출</a></li>
+                <li><a href="c-quiz01.html">mission</a></li>
             </ul>
         </nav>
     </main>
