--- a/quiz/index.html
+++ b/quiz/index.html
@@ -158,6 +158,9 @@
                 <li><a href="quiz06.html">06</a></li>
                 <li><a href="c-quiz01.html">mission</a></li>
             </ul>
+            <ul>
+                <li><a href="quizE01.html">정보처리기능사 주관식100</a></li>
+            </ul>
         </nav>
     </main>
 
