--- a/webd/test.html
+++ b/webd/test.html
@@ -4,208 +4,280 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
+    <title>F-3</title>
     <style>
         * {
             margin: 0;
             padding: 0;
         }
 
+        li {
+            list-style: none;
+        }
+
+        a {
+            text-decoration: none;
+            color: #000;
+        }
+
         #wrap {
-            width: 100%;
-            height: 900px;
-            background-color: rgb(255, 255, 255);
+            margin: 0;
+            padding: 0;
+
         }
 
-        #TOP {
+        #header {
             width: 100%;
             height: 100px;
-            background-color: red;
+            position: relative;
+        }
+
+        #header::after {
+            content: '';
+            width: 100%;
+            height: 1px;
+            position: absolute;
+            left: 0;
+            top: 100;
+            background-color: #9e9d9d;
+            transition: 400ms;
+            z-index: 10;
+        }
+
+        #header.on::after {
+            height: 180px;
+        }
+
+        #header .container {
             display: flex;
         }
 
-        #TOP .top-1 {
-            width: 15%;
+        #header .container logo {
+            width: 20%;
             height: 100px;
-            background-color: #3b1e1e;
+            background-color: hsl(0, 46%, 33%);
         }
 
-        #TOP .top-2 {
-            width: 70%;
-            height: 100px;
-            background-color: #dbc1c1;
-            margin: 0 auto;
-            display: flex;
-        }
-
-        #TOP .top-2 .tc1 {
-            width: 21%;
-            height: 100px;
-            background-color: #a30f0f;
-        }
-
-        #TOP .top-2 .tc2 {
+        #header .container nav {
             width: 80%;
             height: 100px;
-            background-color: #922b2b;
+            background-color: #631212;
+            position: relative;
+            z-index: 100;
+        }
+
+        #header nav>ul {
+            display: flex;
+            justify-content: right;
+            margin-right: 20px;
+            margin-top: 56px;
         }
 
 
-        #TOP .top-3 {
+        #header nav>ul>li>a {
+            padding: 10px 50px;
+            background-color: #6e4848;
+            display: inline-block;
+            border: 1px solid black;
+        }
+
+        #header nav>ul>li>a:hover {
+            background-color: #551111;
+        }
+
+        #header nav>ul>li>ul {
+            display: none;
+        }
+
+        #header nav>ul>li>ul>li {
+            text-align: center;
+        }
+
+
+        #header nav>ul>li>ul>li>a {
+            padding: 10px;
+            display: inline-block;
+            width: 100%;
+            box-sizing: border-box;
+            transition: all 400ms;
+            background-color: #797373;
+        }
+
+        #header nav>ul>li>ul>li>a:hover {
+            background-color: #bbb9b9;
+        }
+
+        #main {
+            width: 100%;
+            height: 350px;
+            position: relative;
+            background-color: #c08383;
+        }
+
+        #main .main1 {
+            width: 100%;
+            height: 50%;
+            background-color: #adaaaa;
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        #main .main2 {
+            width: 1340px;
+            height: 100px;
+            background-color: #8a6b6b;
+            position: absolute;
+            left: 50%;
+            bottom: 0;
+            transform: translateX(-50%);
+        }
+
+        #contents {
+            width: 100%;
+            height: 400px;
+        }
+
+        #contents .c1 {
+            width: 1340px;
+            height: 150px;
+            background-color: #9e1d1d;
+        }
+
+        #contents .c2 {
+            width: 1340px;
+            height: 250px;
+            background-color: #8b7c7c;
+        }
+
+        #footer {
+            width: 100%;
+            height: 120px;
+            display: flex;
+        }
+
+        #footer .footer1 {
             width: 15%;
-            height: 100px;
-            background-color: #c51414;
+            height: 120px;
+            background-color: #bb8a8a;
         }
 
-
-        #JG {
-            width: 70%;
-            height: 300px;
-            background-color: yellow;
-            margin: 0 auto;
+        #footer .footer2 {
+            width: 85%;
+            height: 120px;
+            background-color: #641818;
         }
 
-        #MID {
+        #footer .footer2 .footer2-1 {
             width: 100%;
-            height: 200px;
-            background-color: orange;
+            height: 50%;
+            background-color: #491d1d;
         }
 
-        #MID .mid-1 {
-            width: 70%;
-            height: 200px;
-            background-color: rgb(87, 78, 61);
-            margin: 0 auto;
+        #footer .footer2 .footer2-2 {
+            width: 100%;
+            height: 50%;
+            background-color: #b8b0b0;
+        }
+
+        #footer .container {
+            width: 1340px;
+            height: 120px;
+            background-color: #6b3838;
             display: flex;
         }
 
-        #MID .mid-1 .m1 {
-            width: 33.3333%;
-            height: 200px;
-            background-color: rgb(117, 113, 106);
+        .container {
+            width: 1340px;
+            height: inherit;
             margin: 0 auto;
-        }
-
-        #MID .mid-1 .m2 {
-            width: 33.3333%;
-            height: 200px;
-            background-color: rgb(150, 107, 32);
-            margin: 0 auto;
-        }
-
-        #MID .mid-1 .m3 {
-            width: 33.3333%;
-            height: 200px;
-            background-color: rgb(58, 39, 6);
-            margin: 0 auto;
-        }
-
-
-
-        #AD {
-            width: 70%;
-            height: 200px;
-            background-color: blue;
-            margin: 0 auto;
-            display: flex;
-        }
-
-        #AD .AD-1 {
-            width: 33.3333%;
-            height: 200px;
-            background-color: rgb(135, 135, 196);
-            margin: 0 auto;
-        }
-
-        #AD .AD-2 {
-            width: 66.6666%;
-            height: 200px;
-            background-color: rgb(46, 46, 145);
-            margin: 0 auto;
-        }
-
-        #AD .AD-2 .A1 {
-            width: 100%;
-            height: 100px;
-            background-color: rgb(75, 75, 90);
-            margin: 0 auto;
-        }
-
-        #AD .AD-2 .A2 {
-            width: 100%;
-            height: 100px;
-            background-color: rgb(72, 72, 110);
-            margin: 0 auto;
-        }
-
-        #SUP {
-            width: 100%;
-            height: 100px;
-            background-color: green;
-            display: flex;
-            justify-content: center;
-        }
-
-        #SUP .sup1 {
-            width: 10%;
-            height: 100px;
-            background-color: rgb(15, 46, 15);
-        }
-
-        #SUP .sup2 {
-            width: 60%;
-            height: 100px;
-            background-color: rgb(33, 99, 33);
-        }
-
-        #SUP .sup2 .s1 {
-            width: 100%;
-            height: 50px;
-            background-color: rgb(2, 26, 2);
-        }
-
-        #SUP .sup2 .s2 {
-            width: 100%;
-            height: 50px;
-            background-color: rgb(99, 114, 99);
+            background-color: rgba(175, 98, 98, 0.4);
         }
     </style>
-
 </head>
 
 <body>
     <div id="wrap">
-        <div id="TOP">
-            <div class="top-1"></div>
-            <div class="top-2">
-                <div class="tc1"></div>
-                <div class="tc2"></div>
+        <header id="header">
+            <div class="container">
+                <logo></logo>
+                <nav>
+                    <ul>
+                        <li><a href="#">조회</a>
+                            <ul>
+                                <li><a href="#">계좌조회</a></li>
+                                <li><a href="#">거래내역조회</a></li>
+                                <li><a href="#">휴먼계좌 조회</a></li>
+                                <li><a href="#">수표/어음 조회</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">이체</a>
+                            <ul>
+                                <li><a href="#">계좌이체</a></li>
+                                <li><a href="#">다계좌이체</a></li>
+                                <li><a href="#">자동이체</a></li>
+                                <li><a href="#">예약이체</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">공과금</a>
+                            <ul>
+                                <li><a href="#">지로/생활요금</a></li>
+                                <li><a href="#">지방세</a></li>
+                                <li><a href="#">국세/관세</a></li>
+                                <li><a href="#">범칙금/벌과금</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">외환</a>
+                            <ul>
+                                <li><a href="#">금리</a></li>
+                                <li><a href="#">환율/외화예금</a></li>
+                                <li><a href="#">글로벌뱅킹</a></li>
+                                <li><a href="#">외화송금</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
             </div>
-            <div class="top-3"></div>
-        </div>
-        <div id="JG"></div>
-        <div id="MID">
-            <div class="mid-1">
-                <div class="m1"></div>
-                <div class="m2"></div>
-                <div class="m3"></div>
+        </header>
+
+        <main id="main">
+            <div class="main1"></div>
+            <div class="main2"></div>
+        </main>
+
+        <section id="contents">
+            <div class="container">
+                <div class="c1"></div>
+                <div class="c2">
+                    <div class="c2-1"></div>
+                </div>
             </div>
-        </div>
-        <div id="AD">
-            <div class="AD-1"></div>
-            <div class="AD-2">
-                <div class="A1"></div>
-                <div class="A2"></div>
+        </section>
+
+        <footer id="footer">
+            <div class="container">
+                <div class="footer1"></div>
+                <div class="footer2">
+                    <div class="footer2-1"></div>
+                    <div class="footer2-2"></div>
+                </div>
             </div>
-        </div>
-        <div id="SUP">
-            <div class="sup1"></div>
-            <div class="sup2">
-                <div class="s1"></div>
-                <div class="s2"></div>
-            </div>
-        </div>
+        </footer>
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script>
+        $(function () {
+            $("nav > ul > li").mouseover(function () {
+                $("nav > ul > li > ul").stop().fadeIn();
+                $("#header").addClass("on")
+            });
+            $("nav > ul > li").mouseout(function () {
+                $("nav > ul > li > ul").stop().fadeOut();
+                $("#header").removeClass("on");
+            });
+        });
+    </script>
 </body>
 
 </html>
