--- a/webd/test.html
+++ b/webd/test.html
@@ -9,275 +9,185 @@
         * {
             margin: 0;
             padding: 0;
-        }
 
-        li {
-            list-style: none;
-        }
-
-        a {
-            text-decoration: none;
-            color: #000;
         }
 
         #wrap {
-            margin: 0;
-            padding: 0;
-
+            width: 100%;
+            height: 100%;
         }
 
         #header {
-            width: 100%;
+            width: 1340px;
             height: 100px;
-            position: relative;
-        }
-
-        #header::after {
-            content: '';
-            width: 100%;
-            height: 1px;
-            position: absolute;
-            left: 0;
-            top: 100;
-            background-color: #9e9d9d;
-            transition: 400ms;
-            z-index: 10;
-        }
-
-        #header.on::after {
-            height: 180px;
-        }
-
-        #header .container {
+            background-color: #6a4545;
+            margin: 0 auto;
             display: flex;
         }
 
-        #header .container logo {
-            width: 20%;
+        #header .logo {
+            width: 200px;
             height: 100px;
-            background-color: hsl(0, 46%, 33%);
+            background-color: #893e3e;
         }
 
-        #header .container nav {
-            width: 80%;
-            height: 100px;
-            background-color: #631212;
+        #header .nav {
             position: relative;
-            z-index: 100;
+
         }
 
-        #header nav>ul {
+        #header .nav>ul {
             display: flex;
-            justify-content: right;
-            margin-right: 20px;
-            margin-top: 56px;
         }
 
-
-        #header nav>ul>li>a {
-            padding: 10px 50px;
-            background-color: #6e4848;
+        #header .nav>ul>li {
+            position: relative;
+            margin: 0;
+            top: 0;
+            padding: 10px 20px;
             display: inline-block;
-            border: 1px solid black;
+            background-color: #bc3939;
         }
 
-        #header nav>ul>li>a:hover {
-            background-color: #551111;
+        #header .nav>ul>li>a {
+            padding: 20px;
         }
 
-        #header nav>ul>li>ul {
+        #header .nav>ul>li>ul {
             display: none;
         }
 
-        #header nav>ul>li>ul>li {
-            text-align: center;
-        }
+        #header .nav>ul>li>ul>li {}
 
-
-        #header nav>ul>li>ul>li>a {
-            padding: 10px;
-            display: inline-block;
-            width: 100%;
-            box-sizing: border-box;
-            transition: all 400ms;
-            background-color: #797373;
-        }
-
-        #header nav>ul>li>ul>li>a:hover {
-            background-color: #bbb9b9;
-        }
+        #header .nav>ul>li>ul>li>a {}
 
         #main {
             width: 100%;
             height: 350px;
-            position: relative;
-            background-color: #c08383;
-        }
-
-        #main .main1 {
-            width: 100%;
-            height: 50%;
-            background-color: #adaaaa;
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-
-        #main .main2 {
-            width: 1340px;
-            height: 100px;
-            background-color: #8a6b6b;
-            position: absolute;
-            left: 50%;
-            bottom: 0;
-            transform: translateX(-50%);
+            background-color: #634848;
         }
 
         #contents {
+            width: 1340px;
+            height: 500px;
+            background-color: #503232;
+            margin: 0 auto;
+            z-index: 1000;
+        }
+
+        #contents .content1 {
             width: 100%;
-            height: 400px;
-        }
-
-        #contents .c1 {
-            width: 1340px;
             height: 150px;
-            background-color: #9e1d1d;
+            background-color: #423232;
+
         }
 
-        #contents .c2 {
-            width: 1340px;
-            height: 250px;
-            background-color: #8b7c7c;
+        #contents .content2 {
+            width: 100%;
+            height: 350px;
+            background-color: #863e3e;
+
         }
 
         #footer {
-            width: 100%;
+            width: 1340px;
             height: 120px;
+            background-color: #e1dddd;
+            margin: 0 auto;
             display: flex;
         }
 
         #footer .footer1 {
-            width: 15%;
+            width: 80%;
             height: 120px;
-            background-color: #bb8a8a;
+            background-color: #934c4c;
         }
 
         #footer .footer2 {
-            width: 85%;
+            width: 20%;
             height: 120px;
-            background-color: #641818;
+            background-color: #908484;
         }
 
         #footer .footer2 .footer2-1 {
             width: 100%;
             height: 50%;
-            background-color: #491d1d;
+            background-color: #301c1c;
         }
 
         #footer .footer2 .footer2-2 {
             width: 100%;
             height: 50%;
-            background-color: #b8b0b0;
-        }
-
-        #footer .container {
-            width: 1340px;
-            height: 120px;
-            background-color: #6b3838;
-            display: flex;
-        }
-
-        .container {
-            width: 1340px;
-            height: inherit;
-            margin: 0 auto;
-            background-color: rgba(175, 98, 98, 0.4);
+            background-color: #672c2c;
         }
     </style>
 </head>
 
 <body>
-    <div id="wrap">
+    <div class="wrap">
         <header id="header">
-            <div class="container">
-                <logo></logo>
-                <nav>
-                    <ul>
-                        <li><a href="#">조회</a>
-                            <ul>
-                                <li><a href="#">계좌조회</a></li>
-                                <li><a href="#">거래내역조회</a></li>
-                                <li><a href="#">휴먼계좌 조회</a></li>
-                                <li><a href="#">수표/어음 조회</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">이체</a>
-                            <ul>
-                                <li><a href="#">계좌이체</a></li>
-                                <li><a href="#">다계좌이체</a></li>
-                                <li><a href="#">자동이체</a></li>
-                                <li><a href="#">예약이체</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">공과금</a>
-                            <ul>
-                                <li><a href="#">지로/생활요금</a></li>
-                                <li><a href="#">지방세</a></li>
-                                <li><a href="#">국세/관세</a></li>
-                                <li><a href="#">범칙금/벌과금</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">외환</a>
-                            <ul>
-                                <li><a href="#">금리</a></li>
-                                <li><a href="#">환율/외화예금</a></li>
-                                <li><a href="#">글로벌뱅킹</a></li>
-                                <li><a href="#">외화송금</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
+            <h1 class="logo"></h1>
+            <nav class="nav">
+                <ul>
+                    <li><a href="menu1">메뉴1</a>
+                        <ul class="submenu">
+                            <li><a href="submunu1-1">서브메뉴1-1</a></li>
+                            <li><a href="submunu1-2">서브메뉴1-2</a></li>
+                            <li><a href="submunu1-3">서브메뉴1-3</a></li>
+                            <li><a href="submunu1-4">서브메뉴1-4</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="menu2">메뉴2</a>
+                        <ul class="submenu">
+                            <li><a href="submunu2-1">서브메뉴2-1</a></li>
+                            <li><a href="submunu2-2">서브메뉴2-2</a></li>
+                            <li><a href="submunu2-3">서브메뉴2-3</a></li>
+                            <li><a href="submunu2-4">서브메뉴2-4</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="menu3">메뉴3</a>
+                        <ul class="submenu">
+                            <li><a href="submunu3-1">서브메뉴3-1</a></li>
+                            <li><a href="submunu3-2">서브메뉴3-2</a></li>
+                            <li><a href="submunu3-3">서브메뉴3-3</a></li>
+                            <li><a href="submunu3-4">서브메뉴3-4</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="menu4">메뉴4</a>
+                        <ul class="submenu">
+                            <li><a href="submunu4-1">서브메뉴4-1</a></li>
+                            <li><a href="submunu4-2">서브메뉴4-2</a></li>
+                            <li><a href="submunu4-3">서브메뉴4-3</a></li>
+                            <li><a href="submunu4-4">서브메뉴4-4</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
 
-        <main id="main">
-            <div class="main1"></div>
-            <div class="main2"></div>
-        </main>
 
-        <section id="contents">
-            <div class="container">
-                <div class="c1"></div>
-                <div class="c2">
-                    <div class="c2-1"></div>
-                </div>
-            </div>
-        </section>
-
-        <footer id="footer">
-            <div class="container">
-                <div class="footer1"></div>
-                <div class="footer2">
-                    <div class="footer2-1"></div>
-                    <div class="footer2-2"></div>
-                </div>
-            </div>
-        </footer>
     </div>
+    </header>
+    <main id="main">
+        <div class="container">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script>
-        $(function () {
-            $("nav > ul > li").mouseover(function () {
-                $("nav > ul > li > ul").stop().fadeIn();
-                $("#header").addClass("on")
-            });
-            $("nav > ul > li").mouseout(function () {
-                $("nav > ul > li > ul").stop().fadeOut();
-                $("#header").removeClass("on");
-            });
-        });
-    </script>
+        </div>
+    </main>
+    <section id="contents">
+        <div class="container">
+            <div class="content1"></div>
+            <div class="content2"></div>
+        </div>
+    </section>
+    <footer id="footer">
+        <div class="footer1"></div>
+        <div class="footer2">
+            <div class="footer2-1"></div>
+            <div class="footer2-2"></div>
+        </div>
+        </div>
+        </div>
+
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 </html>
