--- a/webd/test.html
+++ b/webd/test.html
@@ -1,193 +1,11 @@
-<!DOCTYPE html>
-<html lang="ko">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-
-        }
-
-        #wrap {
-            width: 100%;
-            height: 100%;
-        }
-
-        #header {
-            width: 1340px;
-            height: 100px;
-            background-color: #6a4545;
-            margin: 0 auto;
-            display: flex;
-        }
-
-        #header .logo {
-            width: 200px;
-            height: 100px;
-            background-color: #893e3e;
-        }
-
-        #header .nav {
-            position: relative;
-
-        }
-
-        #header .nav>ul {
-            display: flex;
-        }
-
-        #header .nav>ul>li {
-            position: relative;
-            margin: 0;
-            top: 0;
-            padding: 10px 20px;
-            display: inline-block;
-            background-color: #bc3939;
-        }
-
-        #header .nav>ul>li>a {
-            padding: 20px;
-        }
-
-        #header .nav>ul>li>ul {
-            display: none;
-        }
-
-        #header .nav>ul>li>ul>li {}
-
-        #header .nav>ul>li>ul>li>a {}
-
-        #main {
-            width: 100%;
-            height: 350px;
-            background-color: #634848;
-        }
-
-        #contents {
-            width: 1340px;
-            height: 500px;
-            background-color: #503232;
-            margin: 0 auto;
-            z-index: 1000;
-        }
-
-        #contents .content1 {
-            width: 100%;
-            height: 150px;
-            background-color: #423232;
-
-        }
-
-        #contents .content2 {
-            width: 100%;
-            height: 350px;
-            background-color: #863e3e;
-
-        }
-
-        #footer {
-            width: 1340px;
-            height: 120px;
-            background-color: #e1dddd;
-            margin: 0 auto;
-            display: flex;
-        }
-
-        #footer .footer1 {
-            width: 80%;
-            height: 120px;
-            background-color: #934c4c;
-        }
-
-        #footer .footer2 {
-            width: 20%;
-            height: 120px;
-            background-color: #908484;
-        }
-
-        #footer .footer2 .footer2-1 {
-            width: 100%;
-            height: 50%;
-            background-color: #301c1c;
-        }
-
-        #footer .footer2 .footer2-2 {
-            width: 100%;
-            height: 50%;
-            background-color: #672c2c;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="wrap">
-        <header id="header">
-            <h1 class="logo"></h1>
-            <nav class="nav">
-                <ul>
-                    <li><a href="menu1">메뉴1</a>
-                        <ul class="submenu">
-                            <li><a href="submunu1-1">서브메뉴1-1</a></li>
-                            <li><a href="submunu1-2">서브메뉴1-2</a></li>
-                            <li><a href="submunu1-3">서브메뉴1-3</a></li>
-                            <li><a href="submunu1-4">서브메뉴1-4</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="menu2">메뉴2</a>
-                        <ul class="submenu">
-                            <li><a href="submunu2-1">서브메뉴2-1</a></li>
-                            <li><a href="submunu2-2">서브메뉴2-2</a></li>
-                            <li><a href="submunu2-3">서브메뉴2-3</a></li>
-                            <li><a href="submunu2-4">서브메뉴2-4</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="menu3">메뉴3</a>
-                        <ul class="submenu">
-                            <li><a href="submunu3-1">서브메뉴3-1</a></li>
-                            <li><a href="submunu3-2">서브메뉴3-2</a></li>
-                            <li><a href="submunu3-3">서브메뉴3-3</a></li>
-                            <li><a href="submunu3-4">서브메뉴3-4</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="menu4">메뉴4</a>
-                        <ul class="submenu">
-                            <li><a href="submunu4-1">서브메뉴4-1</a></li>
-                            <li><a href="submunu4-2">서브메뉴4-2</a></li>
-                            <li><a href="submunu4-3">서브메뉴4-3</a></li>
-                            <li><a href="submunu4-4">서브메뉴4-4</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-
-
-    </div>
-    </header>
-    <main id="main">
-        <div class="container">
-
-        </div>
-    </main>
-    <section id="contents">
-        <div class="container">
-            <div class="content1"></div>
-            <div class="content2"></div>
-        </div>
-    </section>
-    <footer id="footer">
-        <div class="footer1"></div>
-        <div class="footer2">
-            <div class="footer2-1"></div>
-            <div class="footer2-2"></div>
-        </div>
-        </div>
-        </div>
-
-</body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-</html>
+<script>
+    $(function () {
+        let currentIndex = 0;
+        setInterval(() => {
+            let nextIndex = (currentIndex + 1) % 3
+            $(".slider").eq(currentIndex).fadeOut(1000);
+            $(".slider").eq(nextIndex).fadeIn(1000);
+            currentIndex = nextIndex;
+        })
+    })
+</script>
