--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             </a>
         </div>
         <div class="draggableIcon icon">
-            <a href="html5/index.html" target="_blank">
-                <img src="assets/img/icon-html5.png" alt="HTML5">
+            <a href="webd/index.html" target="_blank">
+                <img src="assets/img/icon-html5.png" alt="webd">
                 <span>Webd</span>
             </a>
         </div>
