--- a/effect/mouse01.html
+++ b/effect/mouse01.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mouse</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/mouse.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 
 
@@ -19,7 +19,7 @@
         .main__inner p {
             color: #000000;
             padding: 10vw;
-            font-size: 5vmax;
+            font-size: 3vmax;
             text-align: center;
             font-family: "Oswald", sans-serif;
             font-weight: 300;
@@ -61,8 +61,8 @@
             backdrop-filter: blur(5px);
             position: absolute;
             border: 1px solid #ffffff48;
-            left: 10px;
-            top: 10px;
+            left: -100px;
+            top: -100px;
             border-radius: 50%;
             z-index: 10000;
             user-select: none;
@@ -160,7 +160,7 @@
     <div id="wrap">
         <header id="header">
             <div class="header__inner">
-                <h1>Mouse Effect <em>01</em></h1>
+                <h1><a href="index.html">Mouse Effect</a> <em>01</em></h1>
             </div>
         </header>
         <!-- //header-->
@@ -202,6 +202,11 @@
                         <li><a href="mouse04.html">04</a></li>
                     </ul>
                 </nav>
+                <div class="link">
+                    <ul>
+                        <li><a href="parallax01.html">parallax</a></li>
+                    </ul>
+                </div>
             </div>
         </footer>
         <!-- //footer-->
