--- a/effect/mouse02.html
+++ b/effect/mouse02.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mouse</title>
-    <link rel="stylesheet" href="assets/css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Honk&family=League+Gothic&family=Seymour+One&family=Sixtyfour&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/mouse.css">
+
 
 
     <style>
@@ -24,11 +25,11 @@
 
         .main__inner p {
             color: #000000;
-            font-size: 40vmax;
+            font-size: 50vmax;
             text-align: center;
             font-family: "League Gothic", sans-serif;
             font-weight: 550;
-            margin-left: 58vw;
+            margin-left: -5vw;
             letter-spacing: -1vw;
             width: 100%;
         }
@@ -52,7 +53,7 @@
             width: 25%;
             text-transform: capitalize;
             font-family: 'Montserrat';
-            color: #a7a7a7;
+            color: #000000;
             font-weight: 200;
         }
 
@@ -63,8 +64,8 @@
             backdrop-filter: blur(5px);
             position: absolute;
             border: 1px solid #ffffff48;
-            left: 10px;
-            top: 10px;
+            left: -100px;
+            top: -100px;
             border-radius: 50%;
             z-index: 10000;
             user-select: none;
@@ -105,7 +106,7 @@
     <div id="wrap">
         <header id="header">
             <div class="header__inner">
-                <h1>Mouse Effect <em>01</em></h1>
+                <h1><a href="index.html">Mouse Effect</a> <em>02</em></h1>
             </div>
         </header>
         <!-- //header-->
@@ -114,7 +115,10 @@
         <main id="main">
             <div class="cursor"></div>
             <div class="main__inner">
-                <p>JavaScript</p>
+                <p>
+                    <span>J</span><span>a</span><span>v</span><span>a</span><span>s</span><span>c</span><span>r</span><span>ipt</span>
+                </p>
+
             </div>
             <div class="main__info">
                 <ul>
@@ -139,6 +143,11 @@
                         <li><a href="mouse04.html">04</a></li>
                     </ul>
                 </nav>
+                <div class="link">
+                    <ul>
+                        <li><a href="parallax01.html">parallax</a></li>
+                    </ul>
+                </div>
             </div>
         </footer>
         <!-- //footer-->
@@ -154,10 +163,17 @@
             document.querySelector(".screenY").innerText = event.screenY;
         });
 
-
+        // mouse
         document.addEventListener("mousemove", (e) => {
-            gsap.to((".cursor"), { duration: 0.7, left: e.clientX - 50, top: e.clientY - 50 })
+            gsap.to(".cursor", { duration: 0.3, left: e.clientX - 10, top: e.clientY - 10 })
+            gsap.to(".cursor2", { duration: 0.7, left: e.clientX - 50, top: e.clientY - 50 })
         });
+
+        document.querySelector("").addEventListener("mouseover", () => {
+            document.querySelector(".cursor").classList.add("active", "yellow");
+            document.querySelector(".cursor2").classList.add("active", "yellow");
+        });
+
     </script>
 </body>
 
