--- a/effect/index.html
+++ b/effect/index.html
@@ -162,7 +162,7 @@
 
         // 애니메이션 설정
         function animate() {
-            circle.rotation.x += 0.025;
+            circle.rotation.x += .0025;
             circle.rotation.z += 0.025;
             net.rotation.x -= 0.025;
             net.rotation.z -= 0.025;
